--- a/FileTransfer/FileTransfer/Site.Master
+++ b/FileTransfer/FileTransfer/Site.Master
@@ -55,6 +55,7 @@
                         <li><a runat="server" href="~/Contact">Contact</a></li>
                         <li><a runat="server" href="~/UploadFile.aspx">Upload a file</a></li>
                         <li><a runat="server" href="~/Retrieval.aspx">Retrieval</a></li>
+                        <li><a runat="server" href="~/Log.aspx">Logs</a></li>
                     </ul>
                     <asp:LoginView runat="server" ViewStateMode="Disabled">
                         <AnonymousTemplate>
